# Plasma-Physics-Sim

./: CMakeLists.txt  README.md
include/particles/: particle.h
src/: main.cpp
src/particles/: particle.cpp
test/: test_energy_conservation.cpp  test_leapfog_energy.cpp  test_particle_motion.cpp
